# issue-control-loop

./: README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
docs/: control-schema.md  mobile-control-surface.md
examples/: prd-example.md
src/issue_control_loop/: __init__.py  cli.py  control_schema.py  digest.py  prd.py  sequence.py  work_shaping.py
tests/: test_digest.py  test_prd.py  test_sequence.py  test_work_shaping.py
